# Hexsaly

./: .gitignore  Cargo.toml  README.md  build.rs  config.json
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/app/: args.rs  cli.rs  patch.rs
src/cli/: args.rs  cli.rs  hexsaly.rs  mod.rs  patch.rs
src/func/: header.rs  logger.rs
