[package]
name = "Patcher"
version = "0.1.5"
edition = "2021"
publish = false


[package.metadata.bundle]
name = "Patcher"
identifier = "io.github.veha0001.BinaryPatch"
version = "0.1.5"
copyright = "Copyright © 2025"
category = "Program"
osx_minimum_system_version = "10.12"

[package.metadata.winres]
OriginalFilename = "Patcher.exe"
LegalCopyright = "Copyright © 2025"
ProductName  = "Binary Patcher"
FileDescription = "A Rust application for patching binaries using config.json"

[profile.dev]
lto = false
incremental = false

[profile.release]
lto = false
panic = "abort"
codegen-units = 1
incremental = false
opt-level = 3

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
colored = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "wincon"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
