[package]
name = "Patcher"
version = "0.1.7"
edition = "2021"
publish = false


[package.metadata.bundle]
name = "Patcher"
identifier = "githubcom.Veha0001.BinaryPatch"
version = "0.1.6"
copyright = "Copyright © 2025"
category = "Program"
osx_minimum_system_version = "10.12"

[package.metadata.winres]
OriginalFilename = "Patcher.exe"
LegalCopyright = "Copyright © 2025"
ProductName  = "Binary Patcher"
FileDescription = "A Rust application for patching binaries using config.json"

[profile.dev]
lto = false
incremental = false

[profile.release]
lto = "off"
panic = "abort"
codegen-units = 1
incremental = false
opt-level = 3

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
colored = "3.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "wincon"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
