[package]
name = "hexsaly"
version = "0.1.8"
authors = ["Veha0001"]
edition = "2021"
publish = false


[package.metadata.bundle]
name = "hexsaly"
identifier = "githubcom.Veha0001.hexsaly"
version = "0.1.8"
copyright = "Copyright © 2025"
category = "Program"
osx_minimum_system_version = "10.12"

[package.metadata.winres]
OriginalFilename = "hexsaly.exe"
LegalCopyright = "Copyright © 2025"
ProductName  = "Hexsaly"
FileDescription = "A Rust application for patching binaries using config.json"

[profile.dev]
lto = false
incremental = false

[profile.release]
lto = "off"
panic = "abort"
codegen-units = 1
incremental = false
opt-level = 3

[dependencies]
dirs = "6.0.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
colored = "3.0"
inquire = "0.7.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "wincon"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
